# polimorphism

./: CMakeLists.txt  Cheese.cpp  Cheese.h  Farming.cpp  Farming.h  Fruit.cpp  Fruit.h  Milk.cpp  Milk.h  Package.cpp  Package.h  Product.cpp  Product.h  SuperMarket.cpp  SuperMarket.h  Vegtebale.cpp  Vegtebale.h  main.cpp
Products/: Cheese.cpp  Cheese.h  Farming.cpp  Farming.h  Fruit.cpp  Fruit.h  Milk.cpp  Milk.h  MilkOther.cpp  MilkOther.h  Package.cpp  Package.h  Product.cpp  Product.h  Vegtebale.cpp  Vegtebale.h
